--- a/package.json
+++ b/package.json
@@ -21,10 +21,16 @@
     "parcel": "^2.15.4"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
+    "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/postcss": "^4.1.11",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.30.1",
+    "react-slick": "^0.31.0",
+    "slick-carousel": "^1.8.1",
+    "tailwind": "^2.3.1",
     "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4.1.11"
   }
